# Knowledge_Retrieval-

./: main.py  pyproject.toml
src/aiou/assets/: aiou_format.txt  assistant.json
src/aiou/assistant_creation/: creation.py
src/aiou/database/: database_connectivity.py
src/aiou/models/: database_sqlmodels.py  pydantic_models.py
src/aiou/openai/: openai_connectivity.py
src/aiou/routes/: main_routes.py
src/aiou/web_scraping/: webs.py
