[tool.poetry]
name = "aiou"
version = "0.1.0"
description = ""
authors = ["Harry5174 <harisjaved010@gmail.com>"]
readme = "README.md"
packages = [{include = "aiou", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
requests = "^2.31.0"
pydantic = "^2.7.1"
httpx = "^0.27.0"
packaging = "^24.0"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.3"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
